--- a/css/style.css
+++ b/css/style.css
@@ -5417,6 +5417,7 @@ body {
   width: 100%;
 }
 .quote-wrapper .quote-content .quote {
+  padding-right: 15px;
   max-width: 554px;
   margin-top: 40px;
 }
@@ -5562,12 +5563,8 @@ body {
   .quote-wrapper {
     padding: 30px 0 55px;
   }
-  .quote-wrapper .quote-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
   .quote-wrapper .quote-content .quote {
+    max-width: 60%;
     margin: 0 auto 25px;
   }
   .quote-wrapper .quote-content .quote h3 {
@@ -5626,6 +5623,17 @@ body {
   }
   .tabbed-content-wrapper .tabbed-content-list-wrapper .tabbed-content-list li.active {
     padding: 0 16px 16px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .quote-wrapper .quote-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .quote-wrapper .quote-content .quote {
+    max-width: none;
+    padding-right: 0;
   }
 }
 .textonly-quote-wrapper {
@@ -7059,6 +7067,11 @@ body {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 1280px) {
+  .two-columns-wrapper .two-columns .column {
+    margin: 0 7.5px;
+  }
+}
 @media screen and (max-width: 1023px) {
   .two-columns-wrapper .two-columns {
     padding: 50px 15px;
@@ -7360,8 +7373,8 @@ body {
   flex-wrap: wrap;
 }
 .pillars .tabs-content .content ul li {
-  max-width: 169px;
-  margin: 0 41.5px 65px;
+  max-width: 252px;
+  margin: 0 0 65px;
   width: 100%;
   display: block;
   color: #000;
@@ -7372,6 +7385,10 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   text-decoration: none;
+}
+.pillars .tabs-content .content ul li div {
+  max-width: 169px;
+  margin: 0 auto;
 }
 .pillars .tabs-content .active .content {
   display: block;
@@ -7505,6 +7522,11 @@ body {
   text-align: center;
 }
 
+@media screen and (max-width: 1280px) {
+  .pillars .tabs-content .content ul {
+    margin: 0 -15px;
+  }
+}
 @media screen and (max-width: 767px) {
   .pillars .tabs {
     display: none;
