--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4523,6 +4523,7 @@ body {
 .listen,
 .download,
 .archived {
+	display: inline-block;
 	position: relative;
 	padding-left: 32px;
 	margin-right: 20px;
@@ -4544,12 +4545,42 @@ body {
 
 		transform: translateY(-50%);
 	}
+
+	&:after {
+		background: #388067;
+		border-radius: 2px;
+		content: '';
+
+		bottom: -5px;
+		left: 0;
+		height: 2px;
+		display: block;
+		position: absolute;
+		width: 100%;
+
+		transform-origin: 100% 50%;
+		transform: scaleX(0);
+		transition: transform .2s ease;
+	}
+
+	&:hover {
+		&:after {
+			transform: scaleX(1);
+			transform-origin: 0 50%;
+		}
+	}
 }
 
 .download {
 	&:before {
 		@extend .svg-download;
 		@extend .svg-download-dims;
+	}
+
+	&:hover {
+		&:before {
+			@extend .svg-download-blue;
+		}
 	}
 }
 
@@ -4558,12 +4589,24 @@ body {
 		@extend .svg-listen;
 		@extend .svg-listen-dims;
 	}
+
+	&:hover {
+		&:before {
+			@extend .svg-listen-blue;
+		}
+	}
 }
 
 .archived {
 	&:before {
 		@extend .svg-folder;
 		@extend .svg-folder-dims;
+	}
+
+	&:hover {
+		&:before {
+			@extend .svg-folder-blue;
+		}
 	}
 }
 
