--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-27a9e7b1.svg") no-repeat;
+	background: url("svg/sprite.css-ddad1de1.svg") no-repeat;
 }
 
 .svg-archived-memo {
 	@extend %svg-common;
-	background-position: 46.00638977635783% 100%;
+	background-position: 15.09433962264151% 100%;
 }
 
 .svg-archived-memo-dims {
@@ -14,7 +14,7 @@
 
 .svg-archived-memo-blue {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 89.20863309352518%;
+	background-position: 100% 40.4040404040404%;
 }
 
 .svg-archived-memo-blue-dims {
@@ -24,7 +24,7 @@
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 98.75389408099689% 37.76223776223776%;
+	background-position: 76.38036809815951% 61.63934426229508%;
 }
 
 .svg-arrow-down-dims {
@@ -34,7 +34,7 @@
 
 .svg-arrow-down-blue {
 	@extend %svg-common;
-	background-position: 99.3730407523511% 19.718309859154928%;
+	background-position: 44.44444444444444% 47.524752475247524%;
 }
 
 .svg-arrow-down-blue-dims {
@@ -44,7 +44,7 @@
 
 .svg-arrow-down-green {
 	@extend %svg-common;
-	background-position: 99.3730407523511% 13.380281690140846%;
+	background-position: 30.246913580246915% 31.023102310231025%;
 }
 
 .svg-arrow-down-green-dims {
@@ -54,7 +54,7 @@
 
 .svg-arrow-down-light-green {
 	@extend %svg-common;
-	background-position: 99.3730407523511% 26.056338028169016%;
+	background-position: 72.53086419753086% 77.55775577557756%;
 }
 
 .svg-arrow-down-light-green-dims {
@@ -64,7 +64,7 @@
 
 .svg-arrow-left-black {
 	@extend %svg-common;
-	background-position: 17.301038062283737% 0;
+	background-position: 59.863945578231295% 0;
 }
 
 .svg-arrow-left-black-dims {
@@ -74,7 +74,7 @@
 
 .svg-arrow-left-green {
 	@extend %svg-common;
-	background-position: 0 19.68503937007874%;
+	background-position: 17.006802721088434% 23.44322344322344%;
 }
 
 .svg-arrow-left-green-dims {
@@ -84,7 +84,7 @@
 
 .svg-arrow-left-white {
 	@extend %svg-common;
-	background-position: 16.608996539792386% 19.68503937007874%;
+	background-position: 43.53741496598639% 0;
 }
 
 .svg-arrow-left-white-dims {
@@ -94,7 +94,7 @@
 
 .svg-arrow-right-black {
 	@extend %svg-common;
-	background-position: 33.910034602076124% 0;
+	background-position: 43.53741496598639% 17.582417582417584%;
 }
 
 .svg-arrow-right-black-dims {
@@ -104,7 +104,7 @@
 
 .svg-arrow-right-green {
 	@extend %svg-common;
-	background-position: 33.910034602076124% 18.89763779527559%;
+	background-position: 0 41.75824175824176%;
 }
 
 .svg-arrow-right-green-dims {
@@ -114,7 +114,7 @@
 
 .svg-arrow-right-light-green {
 	@extend %svg-common;
-	background-position: 0 38.58267716535433%;
+	background-position: 16.3265306122449% 41.75824175824176%;
 }
 
 .svg-arrow-right-light-green-dims {
@@ -124,7 +124,7 @@
 
 .svg-arrow-right-white {
 	@extend %svg-common;
-	background-position: 16.608996539792386% 38.58267716535433%;
+	background-position: 32.6530612244898% 41.75824175824176%;
 }
 
 .svg-arrow-right-white-dims {
@@ -134,7 +134,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 98.75389408099689% 32.16783216783217%;
+	background-position: 92.33128834355828% 73.11475409836065%;
 }
 
 .svg-arrow-up-dims {
@@ -144,7 +144,7 @@
 
 .svg-burger {
 	@extend %svg-common;
-	background-position: 91.98717948717949% 39.16083916083916%;
+	background-position: 70.66246056782335% 61.63934426229508%;
 }
 
 .svg-burger-dims {
@@ -154,7 +154,7 @@
 
 .svg-checkbox {
 	@extend %svg-common;
-	background-position: 66.5615141955836% 98.58156028368795%;
+	background-position: 60.869565217391305% 47.17607973421927%;
 }
 
 .svg-checkbox-dims {
@@ -164,7 +164,7 @@
 
 .svg-checkbox-checked {
 	@extend %svg-common;
-	background-position: 60.25236593059937% 98.58156028368795%;
+	background-position: 54.6583850931677% 47.17607973421927%;
 }
 
 .svg-checkbox-checked-dims {
@@ -174,7 +174,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 82.42811501597444% 86.33093525179856%;
+	background-position: 100% 48.484848484848484%;
 }
 
 .svg-chevron-dims {
@@ -184,7 +184,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 15.335463258785943% 100%;
+	background-position: 100% 16.161616161616163%;
 }
 
 .svg-chevron-green-dims {
@@ -194,7 +194,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 93.48534201954398% 11.029411764705882%;
+	background-position: 31.41025641025641% 21.993127147766323%;
 }
 
 .svg-close-dims {
@@ -204,7 +204,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 93.48534201954398% 0;
+	background-position: 46.15384615384615% 39.175257731958766%;
 }
 
 .svg-close-black-dims {
@@ -214,7 +214,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 74.2671009771987% 88.23529411764706%;
+	background-position: 86.85897435897436% 76.63230240549828%;
 }
 
 .svg-close-blue-dims {
@@ -224,7 +224,7 @@
 
 .svg-download {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 80.57553956834532%;
+	background-position: 100% 56.56565656565657%;
 }
 
 .svg-download-dims {
@@ -234,7 +234,7 @@
 
 .svg-download-blue {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 54.67625899280576%;
+	background-position: 100% 24.242424242424242%;
 }
 
 .svg-download-blue-dims {
@@ -244,7 +244,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 95.7703927492447% 41.891891891891895%;
+	background-position: 94.64285714285714% 91.42857142857143%;
 }
 
 .svg-ellipse-dims {
@@ -254,7 +254,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 7.667731629392971% 100%;
+	background-position: 100% 88.88888888888889%;
 }
 
 .svg-ellipse-empty-dims {
@@ -264,7 +264,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 100% 64.64646464646465%;
 }
 
 .svg-ellipse-selected-dims {
@@ -274,7 +274,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 66.55172413793103% 36.86274509803921%;
+	background-position: 91.86440677966101% 17.153284671532848%;
 }
 
 .svg-facebook-dims {
@@ -284,7 +284,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 16.20689655172414% 57.254901960784316%;
+	background-position: 15.932203389830509% 76.27737226277372%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -294,7 +294,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 0 57.254901960784316%;
+	background-position: 0 76.27737226277372%;
 }
 
 .svg-facebook-green-outline-dims {
@@ -304,7 +304,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 82.75862068965517% 0;
+	background-position: 47.79661016949152% 59.12408759124087%;
 }
 
 .svg-facebook-white-dims {
@@ -314,7 +314,7 @@
 
 .svg-folder {
 	@extend %svg-common;
-	background-position: 100% 7.042253521126761%;
+	background-position: 45.962732919254655% 31.683168316831683%;
 }
 
 .svg-folder-dims {
@@ -324,7 +324,7 @@
 
 .svg-folder-blue {
 	@extend %svg-common;
-	background-position: 72.87066246056783% 97.88732394366197%;
+	background-position: 39.75155279503105% 31.683168316831683%;
 }
 
 .svg-folder-blue-dims {
@@ -334,7 +334,7 @@
 
 .svg-info {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 58.38509316770186% 62.458471760797345%;
 }
 
 .svg-info-dims {
@@ -344,7 +344,7 @@
 
 .svg-insights-article {
 	@extend %svg-common;
-	background-position: 50.836120401337794% 90.9090909090909%;
+	background-position: 51.973684210526315% 90.45936395759718%;
 }
 
 .svg-insights-article-dims {
@@ -354,7 +354,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 0 90.9090909090909%;
+	background-position: 64.47368421052632% 90.45936395759718%;
 }
 
 .svg-insights-article-hover-dims {
@@ -364,7 +364,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 63.54515050167224% 90.9090909090909%;
+	background-position: 26.973684210526315% 90.45936395759718%;
 }
 
 .svg-insights-audio-dims {
@@ -374,7 +374,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 38.12709030100334% 90.9090909090909%;
+	background-position: 89.47368421052632% 90.45936395759718%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -384,7 +384,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 25.418060200668897% 90.9090909090909%;
+	background-position: 76.97368421052632% 90.45936395759718%;
 }
 
 .svg-insights-video-dims {
@@ -394,7 +394,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 12.709030100334449% 90.9090909090909%;
+	background-position: 39.473684210526315% 90.45936395759718%;
 }
 
 .svg-insights-video-hover-dims {
@@ -404,7 +404,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 66.55172413793103% 55.294117647058826%;
+	background-position: 91.86440677966101% 34.306569343065696%;
 }
 
 .svg-linkedin-dims {
@@ -414,7 +414,7 @@
 
 .svg-linkedin-green-fill {
 	@extend %svg-common;
-	background-position: 64.82758620689656% 75.68627450980392%;
+	background-position: 31.864406779661017% 59.12408759124087%;
 }
 
 .svg-linkedin-green-fill-dims {
@@ -424,7 +424,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 48.62068965517241% 75.68627450980392%;
+	background-position: 91.86440677966101% 0;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -434,7 +434,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 32.41379310344828% 75.68627450980392%;
+	background-position: 63.728813559322035% 76.27737226277372%;
 }
 
 .svg-linkedin-white-dims {
@@ -444,7 +444,7 @@
 
 .svg-listen {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 63.30935251798561%;
+	background-position: 7.547169811320755% 100%;
 }
 
 .svg-listen-dims {
@@ -454,7 +454,7 @@
 
 .svg-listen-blue {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 71.94244604316546%;
+	background-position: 100% 8.080808080808081%;
 }
 
 .svg-listen-blue-dims {
@@ -464,7 +464,7 @@
 
 .svg-mail-green-fill {
 	@extend %svg-common;
-	background-position: 16.20689655172414% 75.68627450980392%;
+	background-position: 47.79661016949152% 76.27737226277372%;
 }
 
 .svg-mail-green-fill-dims {
@@ -474,7 +474,7 @@
 
 .svg-mail-green-outline {
 	@extend %svg-common;
-	background-position: 0 75.68627450980392%;
+	background-position: 31.864406779661017% 76.27737226277372%;
 }
 
 .svg-mail-green-outline-dims {
@@ -484,7 +484,7 @@
 
 .svg-map-icon {
 	@extend %svg-common;
-	background-position: 76.6773162939297% 75.89928057553956%;
+	background-position: 100% 32.323232323232325%;
 }
 
 .svg-map-icon-dims {
@@ -494,7 +494,7 @@
 
 .svg-search {
 	@extend %svg-common;
-	background-position: 92.28295819935691% 21.73913043478261%;
+	background-position: 59.49367088607595% 54.91525423728814%;
 }
 
 .svg-search-dims {
@@ -504,7 +504,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 92.28295819935691% 31.159420289855074%;
+	background-position: 74.36708860759494% 70.84745762711864%;
 }
 
 .svg-search-blue-dims {
@@ -514,7 +514,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 81.08108108108108% 18.007662835249043%;
+	background-position: 90.03322259136213% 50.357142857142854%;
 }
 
 .svg-search-icon-dims {
@@ -524,7 +524,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 81.08108108108108% 33.71647509578544%;
+	background-position: 90.03322259136213% 65%;
 }
 
 .svg-search-icon-hover-dims {
@@ -534,7 +534,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 91.69329073482429% 46.0431654676259%;
+	background-position: 100% 72.72727272727273%;
 }
 
 .svg-search-type-all-dims {
@@ -544,7 +544,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 30.670926517571885% 100%;
+	background-position: 100% 80.8080808080808%;
 }
 
 .svg-search-type-insights-dims {
@@ -554,7 +554,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 38.33865814696485% 100%;
+	background-position: 100% 0;
 }
 
 .svg-search-type-people-dims {
@@ -564,7 +564,7 @@
 
 .svg-search-type-strategies {
 	@extend %svg-common;
-	background-position: 23.003194888178914% 100%;
+	background-position: 0 100%;
 }
 
 .svg-search-type-strategies-dims {
@@ -574,7 +574,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 66.55172413793103% 18.431372549019606%;
+	background-position: 75.9322033898305% 51.45985401459854%;
 }
 
 .svg-twitter-dims {
@@ -584,7 +584,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 66.55172413793103% 0;
+	background-position: 75.9322033898305% 34.306569343065696%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -594,7 +594,7 @@
 
 .svg-twitter-green-outline {
 	@extend %svg-common;
-	background-position: 33.10344827586207% 38.431372549019606%;
+	background-position: 75.9322033898305% 17.153284671532848%;
 }
 
 .svg-twitter-green-outline-dims {
@@ -604,7 +604,7 @@
 
 .svg-twitter-white {
 	@extend %svg-common;
-	background-position: 32.41379310344828% 57.254901960784316%;
+	background-position: 59.66101694915254% 17.51824817518248%;
 }
 
 .svg-twitter-white-dims {
@@ -614,7 +614,7 @@
 
 .svg-user {
 	@extend %svg-common;
-	background-position: 81.08108108108108% 49.42528735632184%;
+	background-position: 0 91.42857142857143%;
 }
 
 .svg-user-dims {
@@ -624,7 +624,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 81.08108108108108% 65.13409961685824%;
+	background-position: 13.621262458471762% 91.42857142857143%;
 }
 
 .svg-user-hover-dims {
@@ -634,7 +634,7 @@
 
 .svg-video-close {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 0 23.616236162361623%;
 }
 
 .svg-video-close-dims {
@@ -642,9 +642,29 @@
 	height: 50px;
 }
 
+.svg-video-play {
+	@extend %svg-common;
+	background-position: 23.02158273381295% 0;
+}
+
+.svg-video-play-dims {
+	width: 64px;
+	height: 64px;
+}
+
+.svg-video-play-green {
+	@extend %svg-common;
+	background-position: 0 0;
+}
+
+.svg-video-play-green-dims {
+	width: 64px;
+	height: 64px;
+}
+
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 53.503184713375795% 99.6415770609319%;
+	background-position: 29.780564263322884% 99.66442953020135%;
 }
 
 .svg-view-all-blue-dims {
@@ -654,7 +674,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 84.07643312101911% 75.62724014336918%;
+	background-position: 22.570532915360502% 99.66442953020135%;
 }
 
 .svg-view-all-green-dims {
@@ -664,7 +684,7 @@
 
 .svg-youtube {
 	@extend %svg-common;
-	background-position: 50.3448275862069% 0;
+	background-position: 0 59.12408759124087%;
 }
 
 .svg-youtube-dims {
@@ -674,7 +694,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 50.3448275862069% 36.86274509803921%;
+	background-position: 59.66101694915254% 34.67153284671533%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -684,7 +704,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 48.62068965517241% 57.254901960784316%;
+	background-position: 75.9322033898305% 0;
 }
 
 .svg-youtube-green-outline-dims {
@@ -694,7 +714,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 50.3448275862069% 18.431372549019606%;
+	background-position: 15.932203389830509% 59.12408759124087%;
 }
 
 .svg-youtube-white-dims {
