--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -7460,3 +7460,71 @@ body .ui-tooltip.ui-widget-content {
 		}
 	}
 }
+
+.article-wrapper.video {
+	.social-links-wrapper {
+		top: 65px;
+	}
+}
+
+.video-article-content {
+	display: flex;
+	max-width: 1180px;
+	margin: 0 auto 195px;
+	flex-direction: row-reverse;
+
+	.img-wrapper,
+	.article-content {
+		padding: 0 15px;
+		width: 50%;
+	}
+
+	.article-content {
+		h1 {
+			margin: 20px 0;
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: 600;
+			font-size: 28px;
+			line-height: 39px;
+		}
+
+		p {
+			color: #000;
+			font-family: "Raleway", sans-serif;
+			font-style: normal;
+			font-weight: 600;
+			font-size: 22px;
+			line-height: 31px;
+		}
+	}
+
+	img {
+		max-width: 100%;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.video-article-content {
+		flex-direction: column;
+		margin: 0 auto 50px;
+
+		.img-wrapper,
+		.article-content {
+			width: 100%;
+		}
+
+		.article-content {
+			h1 {
+				font-size: 22px;
+				line-height: 31px;
+			}
+
+			p {
+				font-size: 16px;
+				line-height: 24px;
+			}
+		}
+	}
+}
